Using catch2 for unit test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,53 @@
 cmake_minimum_required(VERSION 3.10)
-project(dragonfly_impl)
+project(dragonfly_impl LANGUAGES CXX)
 
-#Bring the headers into the project
 include_directories(include)
 
-file(GLOB SOURCES "src/*.cpp")
+add_library(engine
+	src/Clock.cpp
+	src/Event.cpp
+	src/GameManager.cpp
+	src/LogManager.cpp
+	src/Manager.cpp
+	src/Object.cpp
+	src/ObjectList.cpp
+	src/ObjectListIterator.cpp
+	src/Vector.cpp
+)
 
-add_executable(game ${SOURCES})
+target_include_directories(engine
+	PUBLIC
+		src
+)
+
+add_executable(engine_test
+	src/game.cpp
+)
+
+target_link_libraries(engine_test
+	PRIVATE
+		engine
+)
+
+
+add_executable(unit_tests
+	test/main.cpp
+	test/test_Hello.cpp
+)
+
+target_include_directories(unit_tests
+	PUBLIC
+		test/
+)
+
+Include(FetchContent)
+
+FetchContent_Declare(
+	Catch2
+	GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+	GIT_TAG        v2.13.8
+)
+
+FetchContent_MakeAvailable(Catch2)
+
+target_link_libraries(unit_tests PRIVATE Catch2 engine)
