--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_executable(unit_tests
 	test/main.cpp
 	test/test_Hello.cpp
 	test/test_ObjectList.cpp
+	test/test_ObjectListIterator.cpp
 )
 
 target_include_directories(unit_tests
