--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ add_executable(unit_tests
 	test/test_Clock.cpp
 	test/test_GameManager.cpp
 	test/test_Manager.cpp
+	test/test_Object.cpp
 )
 
 target_include_directories(unit_tests
